@@ -186,6 +186,24 @@ int vlad_polbase::add_interval(const char *a_name,
   return m_ttable->add(a_name, a_ep1, a_ep2);
 }
 
+/* add a temporal constraint */
+int vlad_polbase::add_tc(vlad_rlist *a_rlist)
+{
+  int retval;
+
+  if (m_stage != 2)
+    return VLAD_INVALIDOP;
+
+  if (a_rlist == NULL)
+    return VLAD_NULLPTR;
+
+  /* verify the rlist */
+  if ((retval = a_rlist->verify(m_stable, NULL)) != VLAD_OK)
+    return retval;
+
+  return m_tnet->add_constraints(a_rlist);
+}
+
 /* add a fact into the initial state table */
 int vlad_polbase::add_inittab(vlad_fact *a_fact)
 {
@@ -358,7 +376,7 @@ int vlad_polbase::close_symtab()
   return VLAD_OK;
 }
 
-/* after this is called, no further calls to add_rel() is allowed */
+/* after this is called, no further calls to add_tc() is allowed */
 int vlad_polbase::close_rel()
 {
   if (m_stage != 2)
@@ -370,7 +388,7 @@ int vlad_polbase::close_rel()
 }
 
 /* after this is called, no further calls to add_entity(), add_interval(),
- * add_rel(), add_constab() and add_updatetab() can be made */
+ * add_tc(), add_constab() and add_updatetab() can be made */
 int vlad_polbase::close_polbase()
 {
   if (m_stage != 3)
